switch post alignment to '.post' much more appropriate. increased headers' and <p> margin-bottom all to 20px. Increased headers' sizes to 50,32,24 for h1,h2,h3 respectively. Specified 'a:visited, a:link' instead of just 'a' to possibly fix link-color never changing. Didn't work, but kept it anyway.

--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ table {
 	margin-bottom: 20px;
 }
 
+.post {
+	max-width: 820px;
+	margin-left: 10px;
+}
+
 .site-info {
 	text-align: center;
 }
@@ -102,21 +107,30 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-	font-size: 36px;
+	font-size: 50px;
+	margin-bottom: 20px;
 }
 
 h2 {
-	font-size: 24px;
+	font-size: 32px;
 	font-weight: bold;
+	margin-bottom: 20px;
 }
 
 h3 {
-	font-size: ;
+	font-size: 24px;
+	font-weight: bold;
+	margin-bottom: 20px;
 }
 
+/* paragraph */
+
 p {
-	font-size: 18px;
+	font-size: 20px;
+	margin-bottom: 20px;
 }
+
+/* italics */
 
 em {
 	font-style: italic;
@@ -137,13 +151,6 @@ nav ul li {
 /* Remove margin-left for last menu item */
 nav ul li:last-of-type {
 	margin-left: 0;
-}
-
-
-/* paragraph */
-
-p {
-
 }
 
 /* anchor tags */
@@ -179,11 +186,11 @@ nav {
 
 /* 2.2 Font Color */
 
-a {
+a:link, a:visited {
 	color: hsla(0, 0%, 40%, 1);
 }
 
-a:hover, a:focus {
+a:hover, a:focus, a:active, {
 	color: hsla(0, 0%, 0% 1);
 }
 
